<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="cn.yuan.uitest.login.ForgetPasswordActivity">
	
	<yuan.core.title.TitleBar
		android:id="@+id/titleBar"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_width="match_parent"
		app:leftClickFinish="true"
		app:leftDrawable="@drawable/ic_login_close"
		android:layout_height="@dimen/size_60">
	
	</yuan.core.title.TitleBar>
	
	<TextView
		android:id="@+id/login_slogan"
		app:layout_constraintTop_toBottomOf="@+id/titleBar"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_margin="@dimen/size_16"
		android:textSize="@dimen/font_24"
		android:text="@string/login_slogan"
		android:textStyle="bold"
		android:textColor="@color/colorFont33"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
	
	<TextView
		android:id="@+id/text_login_subject"
		app:layout_constraintTop_toBottomOf="@+id/login_slogan"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_margin="@dimen/size_16"
		android:textSize="@dimen/font_16"
		android:text="@string/login_login_register"
		android:textColor="@color/colorFont66"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
	
	<yuan.core.roundview.RoundRelativeLayout
		android:id="@+id/layout_phone"
		android:layout_width="match_parent"
		android:layout_height="@dimen/size_48"
		app:rv_strokeWidth="@dimen/size_1"
		android:layout_marginLeft="@dimen/size_16"
		android:layout_marginRight="@dimen/size_16"
		android:layout_marginTop="@dimen/size_32"
		app:rv_strokeColor="@color/colorDivider"
		app:rv_isRadiusHalfHeight="true"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		app:layout_constraintTop_toBottomOf="@+id/text_login_subject">
		
		<EditText
			android:id="@+id/edit_phone"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:background="@null"
			android:textColorHint="@color/colorDivider"
			android:paddingLeft="@dimen/size_16"
			android:layout_alignParentStart="true"
			android:theme="@style/EditTheme"
			android:inputType="text"
			android:singleLine="true"
			android:layout_toLeftOf="@+id/image_clean_username"
			android:hint="@string/login_phone_hint"/>
		
		<ImageView
			android:id="@+id/image_clean_phone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:scaleType="centerInside"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:layout_marginRight="@dimen/size_16"
			android:src="@drawable/ic_login_delete"
			android:visibility="invisible"/>
	
	</yuan.core.roundview.RoundRelativeLayout>
	
	<Button
		android:id="@+id/btn_verification_code"
		android:layout_width="match_parent"
		android:layout_height="@dimen/size_48"
		android:layout_margin="@dimen/size_16"
		style="@style/ButtonTheme"
		android:text="@string/login_get_verification_code"
		app:layout_constraintTop_toBottomOf="@+id/layout_phone"/>
	
	<TextView
		android:id="@+id/text_login_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:text="@string/login_password_subject"
		android:layout_margin="@dimen/size_16"
		android:textSize="@dimen/font_14"
		android:textColor="@color/colorFont66"
		app:layout_constraintTop_toBottomOf="@+id/btn_verification_code"/>
	
	<include layout="@layout/view_other_login"></include>
	
	<!--权限申明/隐私保护-->
</androidx.constraintlayout.widget.ConstraintLayout>
