<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.yuan.uitest.login.LoginActivity">

    <yuan.core.title.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:leftClickFinish="true"
        app:leftDrawable="@drawable/ic_login_close"
        app:rightText="@string/login_register"
        app:rightTextColor="@color/colorFont33">

    </yuan.core.title.TitleBar>

    <TextView
        android:id="@+id/login_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        android:text="@string/login_slogan"
        android:textColor="@color/colorFont33"
        android:textSize="@dimen/font_24"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar" />

    <TextView
        android:id="@+id/text_login_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        android:text="@string/login_password_subject"
        android:textColor="@color/colorFont66"
        android:textSize="@dimen/font_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_slogan" />

    <yuan.core.roundview.RoundRelativeLayout
        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginTop="@dimen/size_32"
        android:layout_marginRight="@dimen/size_16"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/text_login_subject"
        app:rv_isRadiusHalfHeight="true"
        app:rv_strokeColor="@color/colorDivider"
        app:rv_strokeWidth="@dimen/size_1">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/image_clean_username"
            android:background="@null"
            android:hint="@string/login_username"
            android:inputType="text"
            android:paddingLeft="@dimen/size_16"
            android:singleLine="true"
            android:textColorHint="@color/colorDivider"
            android:theme="@style/EditTheme" />

        <ImageView
            android:id="@+id/image_clean_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_16"
            android:scaleType="centerInside"
            android:src="@drawable/ic_login_delete"
            android:visibility="invisible" />

    </yuan.core.roundview.RoundRelativeLayout>

    <yuan.core.roundview.RoundLinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:layout_margin="@dimen/size_16"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/layout_username"
        app:rv_isRadiusHalfHeight="true"
        app:rv_strokeColor="@color/colorDivider"
        app:rv_strokeWidth="@dimen/size_1">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/size_16"
            android:singleLine="true"
            android:textColorHint="@color/colorDivider"
            android:theme="@style/EditTheme" />

        <ImageView
            android:id="@+id/image_clean_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_8"
            android:layout_toLeftOf="@+id/image_clean_password"
            android:layout_toRightOf="@+id/edit_password"
            android:scaleType="centerInside"
            android:src="@drawable/ic_login_delete"
            android:visibility="invisible" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/image_show_eyes"
            android:layout_width="@dimen/size_28"
            android:layout_height="@dimen/size_24"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_16"
            android:background="@drawable/selector_login_eyes"
            android:scaleType="centerInside"
            android:visibility="visible"
            app:showText="false"
            app:splitTrack="false"
            app:theme="@style/scstyle"
            app:thumbTint="#00000000"
            app:trackTint="#00000000" />

    </yuan.core.roundview.RoundLinearLayout>


    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:layout_margin="@dimen/size_16"
        android:text="@string/login_login"
        app:layout_constraintTop_toBottomOf="@+id/layout_password" />

    <TextView
        android:id="@+id/text_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        android:text="@string/login_forget_password"
        android:textColor="@color/colorFont66"
        android:textSize="@dimen/font_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/text_no_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        android:text="@string/login_no_password"
        android:textColor="@color/colorFont66"
        android:textSize="@dimen/font_14"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <include layout="@layout/view_other_login"></include>
</androidx.constraintlayout.widget.ConstraintLayout>
